--- a/Frontend/app/src/app/demo/pages/resume/resume.component.css
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.css
@@ -5,6 +5,7 @@
 .layout-resume {
   display: flex;
 }
+
 .layout-form {
   width: 100%;
   max-height: 100vh;
@@ -32,6 +33,11 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   transition: all 0.3s ease-in-out;
 }
+
 .button-floating:hover {
   background-color: #242424;
+}
+
+.mat-mdc-form-field+.mat-mdc-form-field {
+  margin-left: 8px;
 }
