--- a/Frontend/app/src/app/demo/pages/resume/resume.component.html
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.html
@@ -8,171 +8,295 @@
             <h1 class="h5 fw-normal pb-2">Datos personales</h1>
             <mat-form-field>
               <mat-label>Nombres</mat-label>
-              <input matInput formControlName="firstName" (keyup)="writeResume()" />
+              <input
+                matInput
+                formControlName="firstName"
+                (keyup)="writeResume()"
+              />
             </mat-form-field>
 
             <mat-form-field>
               <mat-label>Apellidos</mat-label>
-              <input matInput formControlName="lastName" (keyup)="writeResume()" />
+              <input
+                matInput
+                formControlName="lastName"
+                (keyup)="writeResume()"
+              />
             </mat-form-field>
 
             <mat-form-field>
               <mat-label>Correo electrónico</mat-label>
-              <input matInput formControlName="contactEmail" (keyup)="writeResume()" />
+              <input
+                matInput
+                formControlName="contactEmail"
+                (keyup)="writeResume()"
+              />
             </mat-form-field>
 
             <mat-form-field>
               <mat-label>Teléfono</mat-label>
-              <input matInput formControlName="contactPhone" (keyup)="writeResume()" />
+              <input
+                matInput
+                formControlName="contactPhone"
+                (keyup)="writeResume()"
+              />
             </mat-form-field>
           </div>
         </form>
         <div class="d-flex flex-column mb-4">
-          <h1 class="h5 fw-normal pb-2">Formación</h1>
-          <form [formGroup]="educationForm">
-            <mat-form-field>
-              <mat-label>Institución</mat-label>
-              <input matInput formControlName="institution" />
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Formación</mat-label>
-              <input matInput formControlName="degree" />
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Fecha de inicio</mat-label>
-              <input matInput [matDatepicker]="pickerInicioFormacion" formControlName="startDate" />
-              <mat-datepicker-toggle matIconSuffix [for]="pickerInicioFormacion"></mat-datepicker-toggle>
-              <mat-datepicker #pickerInicioFormacion></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Fecha de finalización</mat-label>
-              <input matInput [matDatepicker]="pickerFinFormacion" formControlName="endDate" />
-              <mat-datepicker-toggle matIconSuffix [for]="pickerFinFormacion"></mat-datepicker-toggle>
-              <mat-datepicker #pickerFinFormacion></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Descripción</mat-label>
-              <textarea matInput formControlName="description"></textarea>
-            </mat-form-field>
-            <br>
-            <button mat-raised-button color="primary" (click)="addEducation()">Agregar formación</button>
-
-          </form>
-          <div>
-            <div *ngFor="let education of dataresumecontainerService.educationList">
-              <br>
-              <mat-card>
-                <mat-card-content>
-                  <h4>{{ education.institution }}</h4>
-                  <p>Formación: {{ education.degree }}</p>
-                  <p>Descripción: {{ education.description }}</p>
-                </mat-card-content>
-              </mat-card>
-            </div>
-          </div>
+          <mat-accordion>
+            <mat-expansion-panel
+              (opened)="panelOpenState = true"
+              (closed)="panelOpenState = false"
+            >
+              <mat-expansion-panel-header>
+                <mat-panel-title> Formación </mat-panel-title>
+              </mat-expansion-panel-header>
+              <h1 class="h5 fw-normal pb-2">Formación</h1>
+              <form [formGroup]="educationForm">
+                <mat-form-field>
+                  <mat-label>Institución</mat-label>
+                  <input matInput formControlName="institution" />
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Formación</mat-label>
+                  <input matInput formControlName="degree" />
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Fecha de inicio</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="pickerInicioFormacion"
+                    formControlName="startDate"
+                  />
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="pickerInicioFormacion"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #pickerInicioFormacion></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Fecha de finalización</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="pickerFinFormacion"
+                    formControlName="endDate"
+                  />
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="pickerFinFormacion"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #pickerFinFormacion></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Descripción</mat-label>
+                  <textarea matInput formControlName="description"></textarea>
+                </mat-form-field>
+                <br />
+                <button
+                  mat-raised-button
+                  color="primary"
+                  (click)="addEducation()"
+                >
+                  Agregar formación
+                </button>
+              </form>
+              <div>
+                <div
+                  *ngFor="
+                    let education of dataresumecontainerService.educationList
+                  "
+                >
+                  <br />
+                  <mat-card>
+                    <mat-card-content>
+                      <h4>{{ education.institution }}</h4>
+                      <p>Formación: {{ education.degree }}</p>
+                      <p>Descripción: {{ education.description }}</p>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+              </div>
+            </mat-expansion-panel>
+          </mat-accordion>
         </div>
         <div class="d-flex flex-column mb-4">
-          <h1 class="h5 fw-normal pb-2">Experiencia</h1>
-          <form [formGroup]="experienceForm">
-            <mat-form-field>
-              <mat-label>Puesto</mat-label>
-              <input matInput formControlName="jobTitle" />
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Empleador</mat-label>
-              <input matInput formControlName="company" />
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Fecha de inicio</mat-label>
-              <input matInput [matDatepicker]="pickerInicioExp" formControlName="startDate" />
-              <mat-datepicker-toggle matIconSuffix [for]="pickerInicioExp"></mat-datepicker-toggle>
-              <mat-datepicker #pickerInicioExp></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Fecha de finalización</mat-label>
-              <input matInput [matDatepicker]="pickerFinExp" formControlName="endDate" />
-              <mat-datepicker-toggle matIconSuffix [for]="pickerFinExp"></mat-datepicker-toggle>
-              <mat-datepicker #pickerFinExp></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Descripción</mat-label>
-              <textarea matInput formControlName="description"></textarea>
-            </mat-form-field>
-            <br>
-            <button mat-raised-button color="primary" (click)="addExperience()">Agregar experiencia</button>
-          </form>
-          <div>
-            <div *ngFor="let experience of dataresumecontainerService.experienceList">
-              <br>
-              <mat-card>
-                <mat-card-content>
-                  <h4>{{ experience.jobTitle }}</h4>
-                  <p>Empleador: {{ experience.company }}</p>
-                  <p>Descripción: {{ experience.description }}</p>
-                </mat-card-content>
-              </mat-card>
-            </div>
-          </div>
+          <mat-accordion>
+            <mat-expansion-panel
+              (opened)="panelOpenState = true"
+              (closed)="panelOpenState = false"
+            >
+              <mat-expansion-panel-header>
+                <mat-panel-title> Eduación </mat-panel-title>
+              </mat-expansion-panel-header>
+              <form [formGroup]="experienceForm">
+                <mat-form-field>
+                  <mat-label>Puesto</mat-label>
+                  <input matInput formControlName="jobTitle" />
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Empleador</mat-label>
+                  <input matInput formControlName="company" />
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Fecha de inicio</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="pickerInicioExp"
+                    formControlName="startDate"
+                  />
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="pickerInicioExp"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #pickerInicioExp></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Fecha de finalización</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="pickerFinExp"
+                    formControlName="endDate"
+                  />
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="pickerFinExp"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #pickerFinExp></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Descripción</mat-label>
+                  <textarea matInput formControlName="description"></textarea>
+                </mat-form-field>
+                <br />
+                <button
+                  mat-raised-button
+                  color="primary"
+                  (click)="addExperience()"
+                >
+                  Agregar experiencia
+                </button>
+              </form>
+              <div>
+                <div
+                  *ngFor="
+                    let experience of dataresumecontainerService.experienceList
+                  "
+                >
+                  <br />
+                  <mat-card>
+                    <mat-card-content>
+                      <h4>{{ experience.jobTitle }}</h4>
+                      <p>Empleador: {{ experience.company }}</p>
+                      <p>Descripción: {{ experience.description }}</p>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+              </div>
+            </mat-expansion-panel>
+          </mat-accordion>
         </div>
         <div class="d-flex flex-column mb-4">
-          <h1 class="h5 fw-normal pb-2">Proyectos</h1>
-          <form [formGroup]="projectForm">
-            <mat-form-field>
-              <mat-label>Nombre de proyecto</mat-label>
-              <input matInput formControlName="projectName" />
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Fecha de inicio</mat-label>
-              <input matInput [matDatepicker]="pickerInicioProyecto" formControlName="startDate" />
-              <mat-datepicker-toggle matIconSuffix [for]="pickerInicioProyecto"></mat-datepicker-toggle>
-              <mat-datepicker #pickerInicioProyecto></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Fecha de finalización</mat-label>
-              <input matInput [matDatepicker]="pickerFinProyecto" formControlName="endDate" />
-              <mat-datepicker-toggle matIconSuffix [for]="pickerFinProyecto"></mat-datepicker-toggle>
-              <mat-datepicker #pickerFinProyecto></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Descripción</mat-label>
-              <textarea matInput formControlName="description"></textarea>
-            </mat-form-field>
-            <br>
-            <button mat-raised-button color="primary" (click)="addProject()">Agregar proyecto</button>
-          </form>
-          <div>
-            <div *ngFor="let project of dataresumecontainerService.projectList">
-              <br>
-              <mat-card>
-                <mat-card-content>
-                  <h4>{{ project.projectName }}</h4>
-                  <p>Descripción: {{ project.description }}</p>
-                </mat-card-content>
-              </mat-card>
-            </div>
-          </div>
+          <mat-accordion>
+            <mat-expansion-panel
+              (opened)="panelOpenState = true"
+              (closed)="panelOpenState = false"
+            >
+              <mat-expansion-panel-header>
+                <mat-panel-title> Proyectos </mat-panel-title>
+              </mat-expansion-panel-header>
+              <form [formGroup]="projectForm">
+                <mat-form-field>
+                  <mat-label>Nombre de proyecto</mat-label>
+                  <input matInput formControlName="projectName" />
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Fecha de inicio</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="pickerInicioProyecto"
+                    formControlName="startDate"
+                  />
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="pickerInicioProyecto"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #pickerInicioProyecto></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Fecha de finalización</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="pickerFinProyecto"
+                    formControlName="endDate"
+                  />
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="pickerFinProyecto"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #pickerFinProyecto></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Descripción</mat-label>
+                  <textarea matInput formControlName="description"></textarea>
+                </mat-form-field>
+                <br />
+                <button
+                  mat-raised-button
+                  color="primary"
+                  (click)="addProject()"
+                >
+                  Agregar proyecto
+                </button>
+              </form>
+              <div>
+                <div
+                  *ngFor="let project of dataresumecontainerService.projectList"
+                >
+                  <br />
+                  <mat-card>
+                    <mat-card-content>
+                      <h4>{{ project.projectName }}</h4>
+                      <p>Descripción: {{ project.description }}</p>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+              </div>
+            </mat-expansion-panel>
+          </mat-accordion>
         </div>
         <div class="d-flex flex-column mb-4">
-          <h1 class="h5 fw-normal pb-2">Competencias</h1>
-          <form [formGroup]="skillForm">
-            <mat-form-field>
-              <mat-label>Habilidad</mat-label>
-              <input matInput formControlName="skillName" />
-            </mat-form-field>
-            <br>
-            <button mat-raised-button color="primary" (click)="addSkill()">Agregar habilidad</button>
-          </form>
-          <div>
-            <div *ngFor="let skill of dataresumecontainerService.skillList">
-              <br>
-              <mat-card>
-                <mat-card-content>
-                  <h4>{{ skill.skillName }}</h4>
-                </mat-card-content>
-              </mat-card>
-              <br>
-            </div>
-          </div>
+          <mat-accordion>
+            <mat-expansion-panel
+              (opened)="panelOpenState = true"
+              (closed)="panelOpenState = false"
+            >
+              <mat-expansion-panel-header>
+                <mat-panel-title> Competencias </mat-panel-title>
+              </mat-expansion-panel-header>
+              <form [formGroup]="skillForm">
+                <mat-form-field>
+                  <mat-label>Habilidad</mat-label>
+                  <input matInput formControlName="skillName" />
+                </mat-form-field>
+                <br />
+                <button mat-raised-button color="primary" (click)="addSkill()">
+                  Agregar habilidad
+                </button>
+              </form>
+              <div>
+                <div *ngFor="let skill of dataresumecontainerService.skillList">
+                  <br />
+                  <mat-card>
+                    <mat-card-content>
+                      <h4>{{ skill.skillName }}</h4>
+                    </mat-card-content>
+                  </mat-card>
+                  <br />
+                </div>
+              </div>
+            </mat-expansion-panel>
+          </mat-accordion>
         </div>
       </div>
     </div>
