--- a/Frontend/app/src/app/demo/pages/resume/resume.component.css
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.css
@@ -51,3 +51,7 @@
 .mat-form-field {
   width: 100%; /* Asegura que los campos ocupen todo el ancho de su contenedor */
 }
+
+.btnEditar{
+  margin-left: 2%;
+}
