--- a/Frontend/app/src/app/demo/pages/resume/resume.component.html
+++ b/Frontend/app/src/app/demo/pages/resume/resume.component.html
@@ -8,47 +8,48 @@
             <h1 class="h5 fw-normal pb-2">Datos personales</h1>
             <mat-form-field>
               <mat-label>Nombres</mat-label>
-              <input
-                matInput
-                formControlName="firstName"
-                (keyup)="writeResume()"
-              />
+              <input matInput formControlName="firstName" (keyup)="writeResume()" />
             </mat-form-field>
+
+            <mat-error class="text-danger"
+              *ngIf="resumeForm.get('firstName')?.invalid && resumeForm.get('firstName')?.touched">
+              <strong>El campo no admite caracteres numéricos.</strong>
+            </mat-error>
 
             <mat-form-field>
               <mat-label>Apellidos</mat-label>
-              <input
-                matInput
-                formControlName="lastName"
-                (keyup)="writeResume()"
-              />
+              <input matInput formControlName="lastName" (keyup)="writeResume()" />
             </mat-form-field>
+
+            <mat-error class="text-danger"
+              *ngIf="resumeForm.get('lastName')?.invalid && resumeForm.get('lastName')?.touched">
+              <strong>El campo no admite caracteres numéricos.</strong>
+            </mat-error>
 
             <mat-form-field>
               <mat-label>Correo electrónico</mat-label>
-              <input
-                matInput
-                formControlName="contactEmail"
-                (keyup)="writeResume()"
-              />
+              <input matInput formControlName="contactEmail" (keyup)="writeResume()" />
             </mat-form-field>
+
+            <mat-error class="text-danger"
+              *ngIf="resumeForm.get('contactEmail')?.invalid && resumeForm.get('contactEmail')?.touched">
+              <strong>El dato es incorrecto.</strong>
+            </mat-error>
 
             <mat-form-field>
               <mat-label>Teléfono</mat-label>
-              <input
-                matInput
-                formControlName="contactPhone"
-                (keyup)="writeResume()"
-              />
+              <input matInput formControlName="contactPhone" (keyup)="writeResume()" />
             </mat-form-field>
+
+            <mat-error class="text-danger"
+              *ngIf="resumeForm.get('contactPhone')?.invalid && resumeForm.get('contactPhone')?.touched">
+              <strong>El campo no admite caracteres alfanuméricos.</strong>
+            </mat-error>
           </div>
         </form>
         <div class="d-flex flex-column mb-4">
           <mat-accordion>
-            <mat-expansion-panel
-              (opened)="panelOpenState = true"
-              (closed)="panelOpenState = false"
-            >
+            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
               <mat-expansion-panel-header>
                 <mat-panel-title> Formación </mat-panel-title>
               </mat-expansion-panel-header>
@@ -64,28 +65,14 @@
                   </mat-form-field>
                   <mat-form-field>
                     <mat-label>Fecha de inicio</mat-label>
-                    <input
-                      matInput
-                      [matDatepicker]="pickerInicioFormacion"
-                      formControlName="startDate"
-                    />
-                    <mat-datepicker-toggle
-                      matIconSuffix
-                      [for]="pickerInicioFormacion"
-                    ></mat-datepicker-toggle>
+                    <input matInput [matDatepicker]="pickerInicioFormacion" formControlName="startDate" />
+                    <mat-datepicker-toggle matIconSuffix [for]="pickerInicioFormacion"></mat-datepicker-toggle>
                     <mat-datepicker #pickerInicioFormacion></mat-datepicker>
                   </mat-form-field>
                   <mat-form-field>
                     <mat-label>Fecha de finalización</mat-label>
-                    <input
-                      matInput
-                      [matDatepicker]="pickerFinFormacion"
-                      formControlName="endDate"
-                    />
-                    <mat-datepicker-toggle
-                      matIconSuffix
-                      [for]="pickerFinFormacion"
-                    ></mat-datepicker-toggle>
+                    <input matInput [matDatepicker]="pickerFinFormacion" formControlName="endDate" />
+                    <mat-datepicker-toggle matIconSuffix [for]="pickerFinFormacion"></mat-datepicker-toggle>
                     <mat-datepicker #pickerFinFormacion></mat-datepicker>
                   </mat-form-field>
                   <mat-form-field>
@@ -93,39 +80,25 @@
                     <textarea matInput formControlName="description"></textarea>
                   </mat-form-field>
                   <br />
-                  <button
-                    mat-raised-button
-                    color="primary"
-                    (click)="addEducation()"
-                  >
+                  <button mat-raised-button color="primary" (click)="addEducation()">
                     Agregar formación
                   </button>
                 </form>
               </div>
               <div>
-                <div
-                  *ngFor="
+                <div *ngFor="
                     let education of dataresumecontainerService.educationList
-                  "
-                >
+                  ">
                   <br />
                   <mat-card>
                     <mat-card-content>
                       <h4>{{ education.institution }}</h4>
                       <p>Formación: {{ education.degree }}</p>
                       <p>Descripción: {{ education.description }}</p>
-                      <button
-                        mat-raised-button
-                        color="primary"
-                        (click)="deleteEducation(education)"
-                      >
+                      <button mat-raised-button color="primary" (click)="deleteEducation(education)">
                         Eliminar
                       </button>
-                      <button
-                        mat-raised-button
-                        color="primary"
-                        (click)="updateEducation(education)"
-                      >
+                      <button mat-raised-button color="primary" class="btnEditar" (click)="updateEducation(education)">
                         Editar
                       </button>
                     </mat-card-content>
@@ -137,10 +110,7 @@
         </div>
         <div class="d-flex flex-column mb-4">
           <mat-accordion>
-            <mat-expansion-panel
-              (opened)="panelOpenState = true"
-              (closed)="panelOpenState = false"
-            >
+            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
               <mat-expansion-panel-header>
                 <mat-panel-title> Experiencia </mat-panel-title>
               </mat-expansion-panel-header>
@@ -156,28 +126,14 @@
                   </mat-form-field>
                   <mat-form-field>
                     <mat-label>Fecha de inicio</mat-label>
-                    <input
-                      matInput
-                      [matDatepicker]="pickerInicioExp"
-                      formControlName="startDate"
-                    />
-                    <mat-datepicker-toggle
-                      matIconSuffix
-                      [for]="pickerInicioExp"
-                    ></mat-datepicker-toggle>
+                    <input matInput [matDatepicker]="pickerInicioExp" formControlName="startDate" />
+                    <mat-datepicker-toggle matIconSuffix [for]="pickerInicioExp"></mat-datepicker-toggle>
                     <mat-datepicker #pickerInicioExp></mat-datepicker>
                   </mat-form-field>
                   <mat-form-field>
                     <mat-label>Fecha de finalización</mat-label>
-                    <input
-                      matInput
-                      [matDatepicker]="pickerFinExp"
-                      formControlName="endDate"
-                    />
-                    <mat-datepicker-toggle
-                      matIconSuffix
-                      [for]="pickerFinExp"
-                    ></mat-datepicker-toggle>
+                    <input matInput [matDatepicker]="pickerFinExp" formControlName="endDate" />
+                    <mat-datepicker-toggle matIconSuffix [for]="pickerFinExp"></mat-datepicker-toggle>
                     <mat-datepicker #pickerFinExp></mat-datepicker>
                   </mat-form-field>
                   <mat-form-field>
@@ -185,39 +141,26 @@
                     <textarea matInput formControlName="description"></textarea>
                   </mat-form-field>
                   <br />
-                  <button
-                    mat-raised-button
-                    color="primary"
-                    (click)="addExperience()"
-                  >
+                  <button mat-raised-button color="primary" (click)="addExperience()">
                     Agregar experiencia
                   </button>
                 </form>
               </div>
               <div>
-                <div
-                  *ngFor="
+                <div *ngFor="
                     let experience of dataresumecontainerService.experienceList
-                  "
-                >
+                  ">
                   <br />
                   <mat-card>
                     <mat-card-content>
                       <h4>{{ experience.jobTitle }}</h4>
                       <p>Empleador: {{ experience.company }}</p>
                       <p>Descripción: {{ experience.description }}</p>
-                      <button
-                        mat-raised-button
-                        color="primary"
-                        (click)="deleteExperience(experience)"
-                      >
+                      <button mat-raised-button color="primary" (click)="deleteExperience(experience)">
                         Eliminar
                       </button>
-                      <button
-                        mat-raised-button
-                        color="primary"
-                        (click)="updateExperience(experience)"
-                      >
+                      <button mat-raised-button color="primary" class="btnEditar"
+                        (click)="updateExperience(experience)">
                         Editar
                       </button>
                     </mat-card-content>
@@ -229,10 +172,7 @@
         </div>
         <div class="d-flex flex-column mb-4">
           <mat-accordion>
-            <mat-expansion-panel
-              (opened)="panelOpenState = true"
-              (closed)="panelOpenState = false"
-            >
+            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
               <mat-expansion-panel-header>
                 <mat-panel-title> Proyectos </mat-panel-title>
               </mat-expansion-panel-header>
@@ -244,28 +184,14 @@
                   </mat-form-field>
                   <mat-form-field>
                     <mat-label>Fecha de inicio</mat-label>
-                    <input
-                      matInput
-                      [matDatepicker]="pickerInicioProyecto"
-                      formControlName="startDate"
-                    />
-                    <mat-datepicker-toggle
-                      matIconSuffix
-                      [for]="pickerInicioProyecto"
-                    ></mat-datepicker-toggle>
+                    <input matInput [matDatepicker]="pickerInicioProyecto" formControlName="startDate" />
+                    <mat-datepicker-toggle matIconSuffix [for]="pickerInicioProyecto"></mat-datepicker-toggle>
                     <mat-datepicker #pickerInicioProyecto></mat-datepicker>
                   </mat-form-field>
                   <mat-form-field>
                     <mat-label>Fecha de finalización</mat-label>
-                    <input
-                      matInput
-                      [matDatepicker]="pickerFinProyecto"
-                      formControlName="endDate"
-                    />
-                    <mat-datepicker-toggle
-                      matIconSuffix
-                      [for]="pickerFinProyecto"
-                    ></mat-datepicker-toggle>
+                    <input matInput [matDatepicker]="pickerFinProyecto" formControlName="endDate" />
+                    <mat-datepicker-toggle matIconSuffix [for]="pickerFinProyecto"></mat-datepicker-toggle>
                     <mat-datepicker #pickerFinProyecto></mat-datepicker>
                   </mat-form-field>
                   <mat-form-field>
@@ -273,36 +199,22 @@
                     <textarea matInput formControlName="description"></textarea>
                   </mat-form-field>
                   <br />
-                  <button
-                    mat-raised-button
-                    color="primary"
-                    (click)="addProject()"
-                  >
+                  <button mat-raised-button color="primary" (click)="addProject()">
                     Agregar proyecto
                   </button>
                 </form>
               </div>
               <div>
-                <div
-                  *ngFor="let project of dataresumecontainerService.projectList"
-                >
+                <div *ngFor="let project of dataresumecontainerService.projectList">
                   <br />
                   <mat-card>
                     <mat-card-content>
                       <h4>{{ project.projectName }}</h4>
                       <p>Descripción: {{ project.description }}</p>
-                      <button
-                        mat-raised-button
-                        color="primary"
-                        (click)="deleteProject(project)"
-                      >
+                      <button mat-raised-button color="primary" (click)="deleteProject(project)">
                         Eliminar
                       </button>
-                      <button
-                        mat-raised-button
-                        color="primary"
-                        (click)="updateProject(project)"
-                      >
+                      <button mat-raised-button color="primary" class="btnEditar" (click)="updateProject(project)">
                         Editar
                       </button>
                     </mat-card-content>
@@ -314,10 +226,7 @@
         </div>
         <div class="d-flex flex-column mb-4">
           <mat-accordion>
-            <mat-expansion-panel
-              (opened)="panelOpenState = true"
-              (closed)="panelOpenState = false"
-            >
+            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
               <mat-expansion-panel-header>
                 <mat-panel-title> Competencias </mat-panel-title>
               </mat-expansion-panel-header>
@@ -328,11 +237,7 @@
                     <input matInput formControlName="skillName" />
                   </mat-form-field>
                   <br />
-                  <button
-                    mat-raised-button
-                    color="primary"
-                    (click)="addSkill()"
-                  >
+                  <button mat-raised-button color="primary" (click)="addSkill()">
                     Agregar habilidad
                   </button>
                 </form>
@@ -343,18 +248,10 @@
                   <mat-card>
                     <mat-card-content>
                       <h4>{{ skill.skillName }}</h4>
-                      <button
-                        mat-raised-button
-                        color="primary"
-                        (click)="deleteSkill(skill)"
-                      >
+                      <button mat-raised-button color="primary" (click)="deleteSkill(skill)">
                         Eliminar
                       </button>
-                      <button
-                        mat-raised-button
-                        color="primary"
-                        (click)="updateSkill(skill)"
-                      >
+                      <button mat-raised-button color="primary" class="btnEditar" (click)="updateSkill(skill)">
                         Editar
                       </button>
                     </mat-card-content>
